add input command file